--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,22 +1,24 @@
 buildscript {
     repositories {
+        google()
         jcenter()
+
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:3.1.4'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 26
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -26,10 +28,12 @@ android {
 }
 
 repositories {
-    mavenCentral()
+    google()
+    jcenter()
+
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile 'com.wei.android.lib:fingerprintidentify:1.2.1'
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'com.wei.android.lib:fingerprintidentify:1.2.6'
 }
